<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="url_firebase_endpoint">https://intense-heat-6899.firebaseio.com</string>
    <string name="app_name">Friendly Pebble</string>
    <string name="txt_pebble_is_not_connected">Pebble is not connected</string>
    <string name="txt_pebble_is_connected">Pebble is connected</string>
    <string name="action_install_app">Install/Reinstall pebble app</string>
    <string name="txt_introduction">
        read me:
        \nThank you for installing this awesome app. Enjoy it!
    </string>
    <string name="action_shut_down_wifi">if WI-FI signal has been lost - shut down WI-FI!</string>
    <string name="txt_checkbox_show_readme">Show read me on the next launch</string>
    <string name="txt_share_invitation">Have pebble watch? Check out this cool Android app for it (https://play.google.com/store/apps/details?id=com.sukinsan.pebble)</string>
    <string name="txt_action_send_feedback">Submit feedback</string>
    <string name="hint_message">Message</string>
    <string name="action_cancel">Cancel</string>
    <string name="hint_your_name_optional">Your name (optional)</string>
    <string name="toast_message_sent">Your message has been sent! Thank you</string>
    <string name="toast_message_is_empty">Your message is empty</string>
    <string name="manu_feedback">Feedback</string>
</resources>