<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.rightutils.rightutils.widgets.TypefaceEditText
        android:id="@+id/f_feedback_name"
        android:hint="@string/hint_your_name_optional"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    />

    <com.rightutils.rightutils.widgets.TypefaceEditText
        android:id="@+id/f_feedback"
        android:hint="@string/hint_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="start"
        android:lines="4"
    />

    <com.rightutils.rightutils.widgets.TypefaceButton
        android:id="@+id/btn_send_feedback"
        android:text="@string/txt_action_send_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />

</LinearLayout>