<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >

        <com.rightutils.rightutils.widgets.TypefaceTextView
            android:id="@+id/txt_pebble_status"
            android:text="@string/txt_pebble_is_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

        <com.rightutils.rightutils.widgets.TypefaceButton
            android:id="@+id/btn_install_pebble_app"
            android:text="@string/action_install_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

        <com.rightutils.rightutils.widgets.TypefaceCheckbox
            android:id="@+id/checkbox_shutdown_wifi"
            android:text="if wifi lost signal and mobile network activated - shut down wi-fi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
        
        <View
            android:layout_marginTop="5dp"
            android:background="#ccc"
            android:layout_width="match_parent"
            android:layout_height="3dp"/>
        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.rightutils.rightutils.widgets.TypefaceTextView
                android:text="@string/txt_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />

        </ScrollView>
    </LinearLayout>

</RelativeLayout>
